@@ -1,5 +1,6 @@
 Release 1.0 (not yet)
 
+- Query operations can now pass use_cache=False (see issue 156 comment 7).
 - Add support for transaction propagation options (SDK 1.6.4).
 
 ----------------------------------------
